# CodeDisorder

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py  dispatcher.py  errors.py  main.py  routes_confuse.py  routes_meta.py  schemas.py  worker_client.py
backend/resources/: opaque_predicates.json  presets.json  wordlist.txt
backend/resources/language_settings/: c.json  cpp.json  go.json  java.json  python.json
backend/tests/: test_api.py  test_dispatcher.py  test_workers_cpp.py  test_workers_python.py
backend/tests/fixtures/: c_basic.c  cpp_basic.cpp  python_basic.py  python_fib.py
backend/tools/: __init__.py  gen_wordlist.py
backend/verify/: __init__.py  gcc.py  go_vet.py  javac.py  python_ast.py
backend/workers/: __init__.py
backend/workers/c_cpp/: __init__.py  transformer.py  worker.py
backend/workers/common/: __init__.py  jsonrpc.py  lexer.py  seed.py  wordlist.py
backend/workers/go/: __init__.py  transformer.py  worker.py
backend/workers/java/: __init__.py  transformer.py  worker.py
backend/workers/lang_template/: __init__.py
backend/workers/python/: __init__.py  transformer.py  worker.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ControlBar.tsx  EditorPanel.tsx  StatusBar.tsx  StrategyCustomizer.tsx  TopBar.tsx
frontend/src/hooks/: useConfuse.ts  useMeta.ts
frontend/src/lib/: api.ts  languages.ts
scripts/: smoke.sh
(+1 files in other folders)
